[package]
name = "tracing-batteries"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", optional = true }
iana-time-zone = { version = "0.1.63", optional = true }
opentelemetry = { version = "0.29.1", optional = true }
opentelemetry_sdk = { version = "0.29.0", features = [
  "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.29.0", features = [
  "http-json",
  "http-proto",
  "grpc-tonic",
  "reqwest-rustls-webpki-roots",
], optional = true }
radix_fmt = { version = "1.0.0", optional = true }
rand = { version = "0.9.2", optional = true }
reqwest = { version = "0.12.9", default-features = false, features = [
  "brotli",
  "http2",
  "rustls-tls",
] }
sentry = { version = "0.42", default-features = false, optional = true, features = [
  "release-health",
  "reqwest",
  "log",
  "rustls",
] }
serde = { version = "1.0.219", features = ["derive"], optional = true }
sys-locale = { version = "0.3.2", optional = true }
tokio = { version = "1.47.1", optional = true }
tonic = { version = "0.12.3", features = ["tls-roots"], optional = true }
tracing = { version = "0.1.41", features = ["log"] }
tracing-attributes = { git = "https://github.com/SierraSoftworks/tracing.git" }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = { version = "0.30", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["tracing-log"] }
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }

[features]
default = ["medama", "opentelemetry", "sentry"]
sentry = ["dep:sentry"]
opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:tonic",
  "dep:tracing-opentelemetry",
]
medama = [
  "dep:chrono",
  "dep:iana-time-zone",
  "dep:radix_fmt",
  "dep:rand",
  "dep:serde",
  "dep:sys-locale",
  "dep:tokio"
]
