[package]
name = "tracing-batteries"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", optional = true }
hex = { version = "0.4.3", optional = true }
iana-time-zone = { version = "0.1.64", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = [
  "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = [
  "http-json",
  "http-proto",
  "grpc-tonic",
  "tls",
  "reqwest-rustls-webpki-roots",
], optional = true }
radix_fmt = { version = "1.0.0", optional = true }
rand = { version = "0.9.2", optional = true }
reqwest = { version = "0.12.28", default-features = false, features = [
  "brotli",
  "http2",
  "rustls-tls",
] }
sentry = { version = "0.46", default-features = false, optional = true, features = [
  "release-health",
  "reqwest",
  "log",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
sha2 = { version = "0.10.9", optional = true }
sys-locale = { version = "0.3.2", optional = true }
tokio = { version = "1.48.0", optional = true }
tonic = { version = "0.14.2", features = ["tls-webpki-roots", "tls-native-roots"], optional = true }
tracing = { version = "0.1.44", features = ["log"] }
tracing-attributes = { git = "https://github.com/SierraSoftworks/tracing.git" }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = { version = "0.32", optional = true }
tracing-subscriber = { version = "0.3.22" }
opentelemetry-appender-tracing = { version = "0.31.1", features = ["tracing-opentelemetry"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = ["opentelemetry", "sentry"]
sentry = ["dep:sentry"]
opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:tonic",
  "dep:tracing-opentelemetry",
]
medama = [
  "dep:chrono",
  "dep:hex",
  "dep:iana-time-zone",
  "dep:radix_fmt",
  "dep:rand",
  "dep:serde",
  "dep:sha2",
  "dep:sys-locale",
  "dep:tokio",
]
